--- a/train_license_plate_colab.ipynb
+++ b/train_license_plate_colab.ipynb
@@ -155,10 +155,14 @@
    },
    "outputs": [],
    "source": [
-    "# Tạo file mydata.yaml\n",
-    "yaml_content = \"\"\"\n",
+    "# Tạo file mydata.yaml với đường dẫn tuyệt đối\n",
+    "import os\n",
+    "current_dir = os.getcwd()\n",
+    "dataset_path = os.path.join(current_dir, 'dataset')\n",
+    "\n",
+    "yaml_content = f\"\"\"\n",
     "# Dataset configuration for License Plate Detection\n",
-    "path: ./dataset  # dataset root dir\n",
+    "path: {dataset_path}  # dataset root dir (absolute path)\n",
     "train: images/train  # train images (relative to 'path')\n",
     "val: images/val  # val images (relative to 'path')\n",
     "test:  # test images (optional)\n",
@@ -166,12 +170,15 @@
     "# Classes\n",
     "names:\n",
     "  0: Bien_So\n",
+    "\n",
+    "# Number of classes\n",
+    "nc: 1\n",
     "\"\"\"\n",
     "\n",
     "with open('mydata.yaml', 'w', encoding='utf-8') as f:\n",
     "    f.write(yaml_content)\n",
     "\n",
-    "print(\"Đã tạo file mydata.yaml\")\n",
+    "print(f\"Đã tạo file mydata.yaml với đường dẫn: {dataset_path}\")\n",
     "print(\"Nội dung file:\")\n",
     "with open('mydata.yaml', 'r', encoding='utf-8') as f:\n",
     "    print(f.read())"
@@ -204,16 +211,47 @@
     "    ]\n",
     "    \n",
     "    print(\"Kiểm tra cấu trúc dataset:\")\n",
+    "    all_good = True\n",
     "    for dir_path in required_dirs:\n",
     "        if os.path.exists(dir_path):\n",
-    "            file_count = len(os.listdir(dir_path))\n",
+    "            files = [f for f in os.listdir(dir_path) if f.endswith(('.jpg', '.png', '.jpeg', '.txt'))]\n",
+    "            file_count = len(files)\n",
     "            print(f\"✅ {dir_path}: {file_count} files\")\n",
+    "            if file_count == 0:\n",
+    "                print(f\"   ⚠️  Thư mục trống!\")\n",
+    "                all_good = False\n",
     "        else:\n",
     "            print(f\"❌ {dir_path}: Không tồn tại\")\n",
+    "            all_good = False\n",
+    "    \n",
+    "    # Kiểm tra tương ứng giữa images và labels\n",
+    "    train_images = [f.split('.')[0] for f in os.listdir('dataset/images/train') if f.endswith(('.jpg', '.png', '.jpeg'))]\n",
+    "    train_labels = [f.split('.')[0] for f in os.listdir('dataset/labels/train') if f.endswith('.txt')]\n",
+    "    val_images = [f.split('.')[0] for f in os.listdir('dataset/images/val') if f.endswith(('.jpg', '.png', '.jpeg'))]\n",
+    "    val_labels = [f.split('.')[0] for f in os.listdir('dataset/labels/val') if f.endswith('.txt')]\n",
+    "    \n",
+    "    print(f\"\\n📊 Thống kê dataset:\")\n",
+    "    print(f\"   Train: {len(train_images)} images, {len(train_labels)} labels\")\n",
+    "    print(f\"   Val: {len(val_images)} images, {len(val_labels)} labels\")\n",
+    "    \n",
+    "    if len(train_images) != len(train_labels):\n",
+    "        print(f\"   ⚠️  Train: Số lượng images và labels không khớp!\")\n",
+    "        all_good = False\n",
+    "    if len(val_images) != len(val_labels):\n",
+    "        print(f\"   ⚠️  Val: Số lượng images và labels không khớp!\")\n",
+    "        all_good = False\n",
+    "    \n",
+    "    if all_good:\n",
+    "        print(\"\\n🎉 Dataset đã sẵn sàng cho training!\")\n",
+    "    else:\n",
+    "        print(\"\\n❌ Dataset có vấn đề, cần kiểm tra lại!\")\n",
+    "    \n",
+    "    return all_good\n",
     "\n",
-    "check_dataset_structure()\n",
+    "dataset_ready = check_dataset_structure()\n",
     "\n",
     "# Hiển thị cấu trúc thư mục\n",
+    "print(\"\\n📁 Cấu trúc thư mục:\")\n",
     "!find . -type d -name \"*\" | head -20"
    ]
   },
@@ -234,7 +272,18 @@
    },
    "outputs": [],
    "source": [
+    "# Kiểm tra dataset trước khi training\n",
+    "if not dataset_ready:\n",
+    "    print(\"❌ Dataset chưa sẵn sàng! Vui lòng kiểm tra lại.\")\n",
+    "    raise Exception(\"Dataset không hợp lệ\")\n",
+    "\n",
+    "# Kiểm tra file mydata.yaml\n",
+    "if not os.path.exists('mydata.yaml'):\n",
+    "    print(\"❌ File mydata.yaml không tồn tại!\")\n",
+    "    raise Exception(\"File cấu hình dataset không tồn tại\")\n",
+    "\n",
     "# Load pretrained YOLO model\n",
+    "print(\"📥 Downloading pretrained model...\")\n",
     "model = YOLO(\"yolov8x.pt\")  # hoặc yolov8n.pt, yolov8s.pt, yolov8m.pt, yolov8l.pt\n",
     "\n",
     "# Training parameters\n",
@@ -242,10 +291,23 @@
     "IMG_SIZE = 640\n",
     "BATCH_SIZE = 16  # Giảm nếu bị out of memory\n",
     "\n",
-    "print(f\"Bắt đầu training với {EPOCHS} epochs...\")\n",
-    "print(f\"Device: {'GPU' if torch.cuda.is_available() else 'CPU'}\")\n",
+    "print(f\"\\n🚀 Bắt đầu training với {EPOCHS} epochs...\")\n",
+    "print(f\"📱 Device: {'GPU' if torch.cuda.is_available() else 'CPU'}\")\n",
+    "print(f\"🖼️  Image size: {IMG_SIZE}\")\n",
+    "print(f\"📦 Batch size: {BATCH_SIZE}\")\n",
+    "\n",
+    "# Validate dataset trước khi train\n",
+    "try:\n",
+    "    print(\"\\n🔍 Validating dataset...\")\n",
+    "    model.val(data=\"mydata.yaml\", split='val')\n",
+    "    print(\"✅ Dataset validation thành công!\")\n",
+    "except Exception as e:\n",
+    "    print(f\"❌ Dataset validation failed: {e}\")\n",
+    "    print(\"Kiểm tra lại đường dẫn và cấu trúc dataset\")\n",
+    "    raise\n",
     "\n",
     "# Train the model\n",
+    "print(\"\\n🏋️ Bắt đầu training...\")\n",
     "results = model.train(\n",
     "    data=\"mydata.yaml\",\n",
     "    epochs=EPOCHS,\n",
@@ -257,7 +319,8 @@
     "    save=True,\n",
     "    save_period=10,  # Lưu checkpoint mỗi 10 epochs\n",
     "    patience=20,  # Early stopping\n",
-    "    verbose=True\n",
+    "    verbose=True,\n",
+    "    plots=True  # Tạo plots\n",
     ")\n",
     "\n",
     "print(\"\\n🎉 Training hoàn thành!\")"
